Styling updates. More footer links.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,33 @@
 <footer class="site-footer">
   <ul class="site-footer__items l-center">
     <li class="site-footer__item">
-      <a href="https://github.com/mggg">@mggg</a>
+      <a href="https://github.com/mggg">
+        <img
+          src="/assets/Octicons-octoface.svg"
+          class="site-footer__icon"
+          alt="GitHub"
+        />
+        @mggg</a
+      >
     </li>
     <li class="site-footer__item">
-      <a href="https://github.com/mggg-states">@mggg-states</a>
+      <a href="https://github.com/mggg-states">
+        <img
+          src="/assets/Octicons-octoface.svg"
+          class="site-footer__icon"
+          alt="GitHub"
+        />
+        @mggg-states</a
+      >
     </li>
     <li class="site-footer__item">
-      <a href="https://twitter.com/gerrymandr">@gerrymandr</a>
+      <a href="https://twitter.com/gerrymandr">
+        <img
+          src="/assets/Twitter_Logo_WhiteOnImage.svg"
+          class="site-footer__icon"
+          alt="Twitter"
+        />@gerrymandr</a
+      >
     </li>
     <li class="site-footer__item">
       <address>
