--- a/_includes/top_navigation.html
+++ b/_includes/top_navigation.html
@@ -1,16 +1,16 @@
-<header class="top-navigation">
-    <nav>
-        <div class="top-navigation__logo">
-            <a href="/">
-                <img
-                    class="nav-logo"
-                    src="/assets/logo.svg"
-                    alt="Metric Geometry and Gerrymandering Group"
-                />
-            </a>
-        </div>
-        <ul class="nav-links">
-            {% include nav-links.html %}
-        </ul>
-    </nav>
+<header class="site-header">
+  <nav class="site-nav l-center">
+    <div class="site-nav__logo">
+      <a href="/">
+        <img
+          class="site-nav__logo__img"
+          src="/assets/logo.svg"
+          alt="Metric Geometry and Gerrymandering Group"
+        />
+      </a>
+    </div>
+    <ul class="site-nav__links">
+      {% include nav-links.html %}
+    </ul>
+  </nav>
 </header>
