--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -2,3 +2,6 @@ $mggg-blue: #0099cd;
 $mggg-dark-blue: #006b9c;
 $mggg-very-dark-blue: #004464;
 $mggg-light-blue: #5dcaff;
+
+$light-grey: #f9f9f9;
+$grey: #eee;
