--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,7 +1,11 @@
 /* Main */
 
 .l-center {
-  max-width: 60rem;
+  max-width: 48rem;
   margin-left: auto;
   margin-right: auto;
+}
+
+.l-content {
+  padding: 0 1rem;
 }
