--- a/_includes/excerpt.html
+++ b/_includes/excerpt.html
@@ -1,10 +1,10 @@
-<article class="excerpt">
-  <h2 class="post-title">
+<article class="post">
+  <h2 class="post__title">
     <a href="{{ post.url }}">{{ post.title }}</a>
   </h2>
-  <div class="post-metadata">
-    <div class="post-authors">{{ post.authors }}</div>
-    <div class="post-date">{{ post.date | date_to_long_string }}</div>
+  <div class="post__metadata">
+    <div class="post__authors">{{ post.authors }}</div>
+    <div class="post__date">{{ post.date | date_to_long_string }}</div>
   </div>
-  <div class="post-content">{{ post.excerpt }}</div>
+  <div class="post__content">{{ post.excerpt }}</div>
 </article>
