--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <body>
     {% include top_navigation.html %}
 
-    <main>{{ content }}</main>
+    <main class="l-center l-content">{{ content }}</main>
 
     {% include footer.html %}
   </body>
