--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    {% include head.html %}
+  {% include head.html %}
 
-    <body>
-        {% include top_navigation.html %}
+  <body>
+    {% include top_navigation.html %}
 
-        <main>
-            <article>
-                <h1>{{ page.title }}</h1>
-                <div class="post-metadata">
-                    <div class="post-authors">{{ page.authors }}</div>
-                    {% if page.date %}
-                    <div class="post-date">
-                        {{ page.date | date_to_long_string }}
-                    </div>
-                    {% endif %}
-                </div>
-                <div class="post-content">{{ content }}</div>
-            </article>
-        </main>
+    <main class="l-center l-content">
+      <h1 class="post__heading">{{ page.title }}</h1>
+      <div class="post__metadata">
+        <div class="post__authors">{{ page.authors }}</div>
+        {% if page.date %}
+        <div class="post__date">
+          {{ page.date | date_to_long_string }}
+        </div>
+        {% endif %}
+      </div>
+      <div class="post__content">{{ content }}</div>
+    </main>
 
-        {% include footer.html %}
-    </body>
+    {% include footer.html %}
+  </body>
 </html>
