--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -4,13 +4,12 @@
 
 body {
   background: white;
+  // background-color: #f9f9f9;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
 }
 
-// $raised: 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
-// $raised: 0 4px 8px rgba(12, 12, 12, 0.1);
 $raised: 0 4px 16px rgba(12, 12, 13, 0.1);
 
 $inset-bottom: 0px -10px 15px -18px rgba(0, 0, 0, 0.4) inset;
