--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -1,38 +1,40 @@
-.post-metadata {
+.post {
+  margin: 3rem 0;
+}
+
+.post__metadata {
   display: flex;
   justify-content: flex-start;
   line-height: 2;
   margin: 0.5rem 0;
 }
 
-.post-authors,
-.post-date {
+.post__authors,
+.post__date {
   font-family: $font-sans-thin;
-  font-weight: 400;
+  font-weight: 300;
   color: #666;
+  letter-spacing: 0.05rem;
 }
 
-.post-authors {
+.post__authors {
   text-transform: uppercase;
 }
 
-.post-authors::after {
+.post__authors::after {
   content: "|";
   margin: 0 1rem;
 }
 
-.post-title {
-  font-size: 2.25rem;
-  line-height: 1.5;
+.post__title {
+  font-size: 1.75rem;
+  line-height: 1;
+  margin: 0.75rem 0 0.5rem;
 }
 
 @media only screen and (max-width: 700px) {
-  .post-title {
+  .post__title {
     font-size: 1.5rem;
     line-height: 1.25;
   }
-}
-
-.excerpt {
-  margin-top: 1rem;
 }
