Fix icon in footer

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -36,7 +36,7 @@
 .site-footer__icon {
   height: 1.5rem;
   width: 1.5rem;
-  vertical-align: bottom;
+  vertical-align: middle;
   margin-right: 0.25rem;
 }
 
