--- a/_layouts/freeform.html
+++ b/_layouts/freeform.html
@@ -5,7 +5,7 @@
   <body>
     {% include top_navigation.html %}
 
-    <main class="freeform">{{ content }}</main>
+    <main>{{ content }}</main>
 
     {% include footer.html %}
   </body>
