--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@
       </div>
       <header class="site-header" id="about-mggg">
         <nav class="map__nav l-center">
-          <ul class="site-nav__links">
+          <ul class="nav-links site-nav__contents">
             {% include nav-links.html %}
           </ul>
         </nav>
