--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -3,15 +3,13 @@
   {% include head.html %}
 
   <body>
-    {% include top_navigation.html show_categories=true %}
+    {% include top_navigation.html show_categories=false %}
 
     <main class="l-center l-content">
       <h1>{{ page.title }}</h1>
       {{ content }}
-      {% if page.key %}
-      {% for post in site.categories[page.key] %} {% include post_card.html
-      work=post %} {% endfor %}
-      {% endif %}
+      {% if page.key %} {% for post in site.categories[page.key] %} {% include
+      post_card.html work=post %} {% endfor %} {% endif %}
     </main>
 
     {% include footer.html %}
