--- a/_includes/post_card.html
+++ b/_includes/post_card.html
@@ -1,7 +1,12 @@
 {% assign work = include.work %}
 <li class="card">
   {% if work.featured and work.image %}
-  <a class="card__image-link" href="{{ work.href }}" target="_blank">
+  <a
+    class="card__image-link"
+    href="{% if work.href %}{{ work.href }}{% elsif work.url %}{{
+      work.url
+    }}{% endif %}"
+  >
     <img
       class="card__image"
       src="{{ work.image | relative_url }}"
@@ -28,11 +33,15 @@
       <div class="post__authors">{{ work.authors }}</div>
       <div class="post__date">{{ work.date | date_to_long_string }}</div>
     </div>
-    {% endif %} {% if work.description %}
-    {{ work.description | replace: "<p>", '<p class="card__teaser">'}}
-    {% elsif work.excerpt %}
-    {{ work.excerpt | replace: "<p>", '<p class="card__teaser">'}}
-    {% endif %} {% if work.publication %}
+    {% endif %} {% if work.description %} {{ work.description | replace: "
+    <p>", '</p>
+    <p class="card__teaser">
+      '}} {% elsif work.excerpt %} {{ work.excerpt | replace: "
+    </p>
+
+    <p>", '</p>
+    <p class="card__teaser">'}} {% endif %} {% if work.publication %}</p>
+
     <div class="card__publication">
       {{ work.publication }}{% if work.publication_date %},
       {{ work.publication_date | date: "%B %Y" }}. {% endif %}
