--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -8,8 +8,13 @@
     <main class="l-center l-content">
       <h1>{{ page.title }}</h1>
       {{ content }}
-      {% if page.key %} {% for post in site.categories[page.key] %} {% include
-      post_card.html work=post %} {% endfor %} {% endif %}
+      {% if page.key %}
+        <ul class="card-list">
+        {% for post in site.categories[page.key] %}
+          {% include post_card.html work=post %}
+        {% endfor %}
+        </ul>
+      {% endif %}
     </main>
 
     {% include footer.html %}
