--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -62,8 +62,13 @@ p {
   margin: 1rem 0;
 }
 
-tt {
+tt,
+code {
   font-family: "Fira Code", "Consolas", monospace;
+  background: $grey;
+  padding: 0.25rem;
+  border-radius: 0.25rem;
+  box-sizing: content-box;
 }
 @media only screen and (max-width: 700px) {
   h1 {
