--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -39,3 +39,14 @@
   font-size: 2rem;
   padding: 1rem;
 }
+
+hr {
+  margin: 2rem 0;
+
+  outline: none;
+  border-collapse: collapse;
+  border-right: none;
+  border-left: none;
+  border-bottom: none;
+  border-top: 1px solid #004464;
+}
