--- a/_includes/card.html
+++ b/_includes/card.html
@@ -30,15 +30,20 @@
     </h3>
     {% if work.authors %}
     <div class="card__authors">{{ work.authors }}</div>
-    {% endif %} {% if work.description %} {{ work.description | replace: "
-    <p>", '</p>
-    <p class="card__teaser">
-      '}} {% elsif work.excerpt %} {{ work.excerpt | replace: "
-    </p>
-
-    <p>", '</p>
-    <p class="card__teaser">'}} {% endif %} {% if work.publication %}</p>
-
+    {% endif %} 
+    {% if work.description %}
+    {{
+      work.description
+      | markdownify
+      | replace: "<p>", '<p class="card__teaser">'
+    }}
+    {% elsif work.excerpt %}
+    {{
+      work.excerpt
+      | replace: "<p>", '<p class="card__teaser">'
+    }}
+    {% endif %}
+    {% if work.publication %}
     <div class="card__publication">
       {{ work.publication }}{% if work.publication_date %},
       {{ work.publication_date | date: "%B %Y" }}. {% endif %}
@@ -48,5 +53,5 @@
       {{ work.publication_date | date: "%B %Y" }}.
     </div>
     {% endif %}
-  </div>
+    </div>
 </li>
