--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -3,17 +3,16 @@
   {% include head.html %}
 
   <body>
-    {% include top_navigation.html show_categories=false %}
+    {% include top_navigation.html show_categories=true %}
 
     <main class="l-center l-content">
       <h1>{{ page.title }}</h1>
       {{ content }}
       {% if page.key %}
-        <ul class="card-list">
-        {% for post in site.categories[page.key] %}
-          {% include post_card.html work=post %}
-        {% endfor %}
-        </ul>
+      <ul class="card-list">
+        {% for post in site.categories[page.key] %} {% include post_card.html
+        work=post %} {% endfor %}
+      </ul>
       {% endif %}
     </main>
 
