--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -1,7 +1,7 @@
 <nav class="categories">
-  <ul class="nav-links nav-links--centered">
-    {% assign categories = site.category_pages | sort: "index" %}
-    {% for link in categories %}
+  <ul class="nav-links nav-links--centered nav-links--wrap">
+    {% assign categories = site.category_pages | sort: "index" %} {% for link in
+    categories %}
     <li>
       <a
         href="{{ link.url | relative_url }}"
