--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -18,7 +18,6 @@
   // border-bottom: 1px solid $mggg-very-dark-blue;
   margin: 0;
   padding: 0;
-  overflow-x: auto;
   font-size: 1rem;
   // box-shadow: $raised;
   box-shadow: $inset-bottom;
@@ -32,7 +31,7 @@
 }
 
 .site-nav__logo {
-  flex: 2;
+  flex: 1.5;
   padding: 0.5rem 0;
 }
 
@@ -44,7 +43,8 @@
 
 .site-nav__contents {
   flex: 4;
-  justify-content: space-between;
+  justify-content: center;
+  overflow-x: hidden;
 }
 
 .nav-links {
@@ -53,7 +53,7 @@
   padding: 0;
 
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   align-items: center;
 }
 
@@ -99,6 +99,10 @@
 
 .nav-links--centered {
   justify-content: center;
+}
+
+.nav-links--wrap {
+  flex-wrap: wrap;
 }
 
 .nav-links__link--minor {
