--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,25 +6,7 @@
     {% include top_navigation.html %}
 
     <main class="l-center l-content">
-      <h1 class="post__heading">{{ page.title }}</h1>
-      <div class="post__metadata">
-        <div class="post__authors">{{ page.authors }}</div>
-        {% if page.date %}
-        <div class="post__date">
-          {{ page.date | date_to_long_string }}
-        </div>
-        {% endif %}
-      </div>
-      {% if page.image %}
-      <figure class="post__image">
-        <img
-          class="post__image"
-          src="{{ page.image | relative_url }}"
-          alt="{{ page.image_caption }}"
-        />
-      </figure>
-      {% endif %}
-
+      {% include post_heading.html %}
       <div class="post__content">{{ content }}</div>
     </main>
 
