--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -53,6 +53,7 @@
   padding: 0;
 
   display: flex;
+  justify-content: space-between;
   flex-wrap: nowrap;
   align-items: center;
 }
@@ -66,6 +67,12 @@
   letter-spacing: 0.1rem;
 
   transition: all 100ms ease;
+}
+
+.nav-links__link--see-more {
+  align-self: center;
+  background-color: $light-grey;
+  margin: 1rem 0;
 }
 
 .nav-links__link--major {
