Add MIT viz and maup post

--- a/_includes/featured_posts.html
+++ b/_includes/featured_posts.html
@@ -1,4 +1,5 @@
 <ul class="card-list">
-  {% assign posts = site.posts %} {% for post in posts | limit: include.limit %}
-  {% include post_card.html work=post %} {% endfor %}
+  {% assign posts = site.posts | where: "featured","true" %} {% for post in
+  posts | limit: include.limit %} {% include post_card.html work=post %} {%
+  endfor %}
 </ul>
