--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,5 +17,6 @@
     href="https://fonts.googleapis.com/css?family=Playfair+Display:700|Lora:400,400i,700|Source+Sans+Pro:300,400"
     rel="stylesheet"
   />
+  <meta property="og:type" content="{% if page.date %}article{% else %}website{% endif %}">
   {% seo title=false %}
 </head>
