--- a/_sass/components/_card.scss
+++ b/_sass/components/_card.scss
@@ -39,7 +39,7 @@
   width: 100%;
   max-height: 200px;
   overflow: hidden;
-  border-bottom: 1px solid #004464;
+  border-bottom: 1px solid $mggg-very-dark-blue;
 }
 
 .card__authors {
