--- a/_includes/top_navigation.html
+++ b/_includes/top_navigation.html
@@ -25,8 +25,12 @@
     </div>
     <ul id="nav-links" class="nav-links site-nav__contents">
       {% if include.show_categories %} {% assign highlight_link = "/work" %} {%
-      endif %} {% include nav-links.html highlight_link=highlight_link %}
+      endif %}
+      {% if include.show_about %} {% assign highlight_link = "/who" %} {%
+      endif %}
+      {% include nav-links.html highlight_link=highlight_link %}
     </ul>
   </nav>
   {% if include.show_categories %} {% include categories.html %} {% endif %}
+  {% if include.show_about %} {% include about.html %} {% endif %}
 </header>
