--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   {% include head.html %}
 
   <body>
-    {% include top_navigation.html show_categories=page.show_categories %}
+    {% include top_navigation.html show_categories=page.show_categories show_about=page.show_about %}
 
     <main class="l-center l-content">{{ content }}</main>
 
