Highlight team nav button when selected

--- a/_includes/top_navigation.html
+++ b/_includes/top_navigation.html
@@ -26,7 +26,7 @@
     <ul id="nav-links" class="nav-links site-nav__contents">
       {% if include.show_categories %} {% assign highlight_link = "/work" %} {%
       endif %}
-      {% if include.show_about %} {% assign highlight_link = "/who" %} {%
+      {% if include.show_about %} {% assign highlight_link = "/about-us" %} {%
       endif %}
       {% include nav-links.html highlight_link=highlight_link %}
     </ul>
