Metric Geometry and Gerrymandering Group -> MGGG Redistricting Lab

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,8 +36,7 @@
     </li>
     <hr class="site-footer__hr" />
     <li class="site-footer__copyright">
-      &#169; {{ site.time | date: "%Y" }} Metric Geometry and Gerrymandering
-      Group
+      &#169; {{ site.time | date: "%Y" }} MGGG Redistricting Lab
     </li>
   </ul>
 </footer>
