--- a/_includes/support_statement.html
+++ b/_includes/support_statement.html
@@ -1,5 +1,5 @@
 <p class="support">
-    The Metric Geometry and Gerrymandering Group is a nonpartisan research
+    The MGGG Redistricting Lab is a nonpartisan research
     organization. MGGG has major support from the
     <a href="https://tischcollege.tufts.edu/"
         >Jonathan M. Tisch College of Civic Life</a
