--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico" />
   <title>
-    {% if page.title %} {{ page.title }} | {% endif %}Metric Geometry and
-    Gerrymandering Group
+    {% if page.title %} {{ page.title }} | {% endif %}MGGG Redistricting Lab
   </title>
   <link rel="stylesheet" type="text/css" media="screen" href="
   {{
