--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@
         </a>
         <a href="/">
           <h1 class="map__title">
-            Metric Geometry and Gerrymandering Group
+            Redistricting Lab
           </h1>
         </a>
       </div>
