update metagraph sizes using ZDD

--- a/_includes/metagraph-table.html
+++ b/_includes/metagraph-table.html
@@ -104,14 +104,14 @@
         <th>5x5 &rarr; 5</th>
         <td><a href="/metagraph/5x5.html">4,006</a></td>
         <td>193,128</td>
-        <td>147,250</td>
+        <td>1472,750</td>
         <td>6,194,822</td>
-        <td class="unknown">?</td>
+        <td>72,137,699</td>
         <td>1,397,790</td>
         <td>70,491,206</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
+        <td>565,708,110</td>
+        <td>2,467,619,460</td>
+        <td>19,258,645,522</td>
       </tr>
     </tbody>
     <tbody>
@@ -119,92 +119,92 @@
         <th>6x6 &rarr; 2</th>
         <td>80,518</td>
         <td>241,218</td>
-        <td>400,474</td>
+        <td>400,727</td>
         <td>557,031</td>
         <td>1,123,743</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
-        <td class="unknown">?</td>
+        <td>2,668,525,423</td>
       </tr>
       <tr>
         <th>6x6 &rarr; 3</th>
         <td>264,500</td>
         <td>1,848,872</td>
+        <td>5,006,968</td>
+        <td class="unknown">9,714,644</td>
+        <td class="unknown">99,699,033</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
+        <td>981,728,132,977</td>
       </tr>
       <tr>
         <th>6x6 &rarr; 4</th>
         <td>442,791</td>
         <td>8,313,719</td>
+        <td>36,716,529</td>
+        <td>98,715,441</td>
+        <td>2,872,166,677</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
+        <td>33,178,431,625,979</td>
       </tr>
       <tr>
         <th>6x6 &rarr; 6</th>
         <td>451,206</td>
         <td>61,412,106</td>
+        <td>787,941,042</td>
+        <td>4,564,190,094</td>
+        <td>356,612,826,084</td>
+        <td>6,025,727,349</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
+        <td>3,628,666,881,233,030</td>
       </tr>
       <tr>
         <th>6x6 &rarr; 9</th>
         <td>178,939</td>
         <td>600,896,399</td>
+        <td>44,824,927,867</td>
+        <td>1,246,776,785,419</td>
+        <td>27,173,118,202,682</td>
+        <td>1,411,875,619</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
+        <td>193,647,162,942,941,072</td>
       </tr>
       <tr>
         <th>6x6 &rarr; 12</th>
         <td>80,092</td>
+        <td>4,555,902,726</td>
+        <td>2,994,170,540,354</td>
+        <td>19,290,275,421,883</td>
+        <td>217,674,971,893,169</td>
+        <td>245,410,623</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
+        <td>1,045,944,428,847,211,954</td>
       </tr>
       <tr>
         <th>6x6 &rarr; 18</th>
         <td>6,728</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
+        <td>321,276,916,270 </td>
+        <td>13,415,885,335,894</td>
+        <td>49,804,910,882,006</td>
+        <td>146,904,919,330,547</td>
         <td>3,037,561</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
-        <td class="unknown">?</td>
+        <td>240,051,309,075,264,719</td>
       </tr>
     </tbody>
     <tbody>
@@ -214,12 +214,12 @@
         <td class="unknown">?</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
+        <td>7,146,137,621,219,723</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
-        <td class="unknown">?</td>
-        <td class="unknown">?</td>
+        <td>7,291,155,679,611,862,880,190</td>
       </tr>
     </tbody>
     <tbody>
@@ -229,7 +229,7 @@
         <td class="unknown">?</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
-        <td class="unknown">?</td>
+        <td>556,983,247,769,141,192,388</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
@@ -244,7 +244,7 @@
         <td class="unknown">?</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
-        <td class="unknown">?</td>
+        <td>163,738,881,245,258,156,011,991,945</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
         <td class="unknown">?</td>
