--- a/_includes/team.html
+++ b/_includes/team.html
@@ -5,7 +5,7 @@
 </dl>
 
 <h2>Key Collaborators, Past and Present</h2>
-<dl class="bio-list">
+<dl class="bio-list-collab">
   {% assign collaborators = site.people | where: "group", "collaborators" %} {%
   for person in collaborators %} {% include bio.html person=person %} {% endfor
   %}
