--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,6 +6,12 @@
   margin-right: auto;
 }
 
+.l-center-wide {
+  max-width: 70rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .l-flex-center {
   display: flex;
   flex-direction: column;
