updates to coi post.

--- a/_includes/portals-table.html
+++ b/_includes/portals-table.html
@@ -1,26 +1,26 @@
 <style>
   {% include table.css %}
 </style>
-<div class="table-container">
+<div class="table-container" style="font-size: x-small;">
   <table>
     <colgroup class="row-labels"></colgroup>
-    <colgroup  class="queen" span="8"></colgroup>
+    <colgroup  class="portal" span="8"></colgroup>
     <thead>
       <tr>
         <th></th>
-        <th colspan="8" class="queen-heading" scope="colgroup">State</th>
+        <th colspan="8" class="portal-heading" scope="colgroup">State</th>
       </tr>
       <tr>
         <th></th>
 
-        <th class="queen-label"><a href="https://portal.florida-mapping.org/">FL</a></th>
-        <th class="queen-label"><a href="https://www.michigan-mapping.org/">MI</a></th>
-        <th class="queen-label"><a href="https://portal.missouri-mapping.org/">MO</a></th>
-        <th class="queen-label"><a href="https://portal.newmexico-mapping.org/">NM</a></th>
-        <th class="queen-label"><a href="https://portal.ohio-mapping.org/">OH</a></th>
-        <th class="queen-label"><a href="https://portal.pennsylvania-mapping.org/">PA</a></th>
-        <th class="queen-label"><a href="https://portal.texas-mapping.org/">TX</a></th>
-        <th class="queen-label"><a href="https://portal.wisconsin-mapping.org/">WI</a></th>
+        <th class="portal-label">FL (<a href="https://portal.florida-mapping.org/">link</a>)</th>
+        <th class="portal-label">MI (<a href="https://www.michigan-mapping.org/">link</a>)</th>
+        <th class="portal-label">MO (<a href="https://portal.missouri-mapping.org/">link</a>)</th>
+        <th class="portal-label">NM (<a href="https://portal.newmexico-mapping.org/">link</a>)</th>
+        <th class="portal-label">OH (<a href="https://portal.ohio-mapping.org/">link</a>)</th>
+        <th class="portal-label">PA (<a href="https://portal.pennsylvania-mapping.org/">link</a>)</th>
+        <th class="portal-label">TX (<a href="https://portal.texas-mapping.org/">link</a>)</th>
+        <th class="portal-label">WI (<a href="https://portal.wisconsin-mapping.org/">link</a>)</th>
       </tr>
     </thead>
     <tbody>
@@ -40,7 +40,7 @@
       <tr>
         <th># COI submissions (as of 31 Oct 2021)</th>
         <td>71</td>
-        <td>1120</td>
+        <td>1,120</td>
         <td>762</td>
         <td>11</td>
         <td>717</td>
