--- a/_includes/support_statement.html
+++ b/_includes/support_statement.html
@@ -1,15 +1,8 @@
 <p class="support">
     The MGGG Redistricting Lab is a nonpartisan research
-    organization. MGGG has major support from the
+    organization located within the
     <a href="https://tischcollege.tufts.edu/"
         >Jonathan M. Tisch College of Civic Life</a
     >
-    at Tufts University and the
-    <a href="https://bosefellows.mit.edu/"
-        >Amar G. Bose Research Grant Program</a
-    >
-    at MIT and an active partnership with the
-    <a href="https://lawyerscommittee.org/"
-        >Lawyers' Committee for Civil Rights Under Law</a
-    >.
+    at Tufts University.
 </p>
