--- a/_includes/team.html
+++ b/_includes/team.html
@@ -5,11 +5,10 @@
 </dl>
 
 <h2>Summer Fellows</h2>
-<div class="bio-list-summer">
+<dl class="bio-list-summer">
   {% assign summer_fellows = site.people | where: "group", "summer_fellows" %} {%
-  for person in summer_fellows %} {% include bio.html person=person %} {% endfor
-  %}
-</div>
+  for person in summer_fellows %} {% include bio.html person=person %} {% endfor %}
+</dl>
 
 <h2>Key Collaborators, Past and Present</h2>
 <div class="bio-list-collab">
