format summer fellows

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -6,8 +6,8 @@
 
 <h2>Summer Fellows</h2>
 <dl class="bio-list-summer">
-  {% assign summer_fellows = site.people | where: "group", "summer_fellows" %} {%
-  for person in summer_fellows %} {% include bio.html person=person %} {% endfor %}
+  {% assign summer_fellows = site.people | where: "group", "summer_fellows" %} {% for 
+  person in summer_fellows %} {% include bio.html person=person %} {% endfor %}
 </dl>
 
 <h2>Key Collaborators, Past and Present</h2>
