--- a/_includes/team.html
+++ b/_includes/team.html
@@ -4,7 +4,7 @@
   person in local_people %} {% include bio.html person=person %} {% endfor %}
 </dl>
 
-<h2>Summer Fellows</h2>
+<h2>Summer Fellows 2025</h2>
 <dl class="bio-list-summer">
   {% assign summer_fellows = site.people | where: "group", "summer_fellows" %} {% for 
   person in summer_fellows %} {% include bio.html person=person %} {% endfor %}
