--- a/_includes/support_statement.html
+++ b/_includes/support_statement.html
@@ -1,8 +1,8 @@
 <p class="support">
-    The MGGG Redistricting Lab is a nonpartisan research
+    The Data and Democracy Lab is a nonpartisan research
     organization located within the
-    <a href="https://tischcollege.tufts.edu/"
-        >Jonathan M. Tisch College of Civic Life</a
+    <a href="https://datascience.ucchicago.edu/"
+        >Data Science Institute</a
     >
-    at Tufts University.
+    at the University of Chicago.
 </p>
