--- a/_includes/support_statement.html
+++ b/_includes/support_statement.html
@@ -1,7 +1,7 @@
 <p class="support">
     The Data and Democracy Lab is a nonpartisan research
     organization located within the
-    <a href="https://datascience.ucchicago.edu/"
+    <a href="https://datascience.uchicago.edu/"
         >Data Science Institute</a
     >
     at the University of Chicago.
